# cpp-debugger-mcp

./: README.md  __main__.py  debugger.py  logger.py  pyproject.toml  server.py  win_job_monitor.py
.github/workflows/: build.yml
